# microfetch

./: Cargo.toml  README.md  flake.nix
.github/workflows/: hotpath-comment.yml  hotpath-profile.yml  rust.yml
benches/: benchmark.rs
nix/: package.nix
src/: colors.rs  desktop.rs  dots.rs  lib.rs  main.rs  release.rs  syscall.rs  system.rs  uptime.rs
